# ts_ledprojector

./: Jenkinsfile  Jenkinsfile.conda  README.rst  SConstruct  pyproject.toml  setup.py  towncrier.toml
.github/workflows/: lint.yaml
conda/: meta.yaml
doc/: conf.py  index.rst  manifest.yaml  version-history.rst  version_history.rst
doc/news/: DM-44709.feature.rst  DM-44709.misc.rst  DM-44713.misc.rst  DM-45809.misc.rst  DM-49653.bugfix.rst  OSW-562.feature.rst  OSW-698.perf.rst  README.rst  dm-43459.feature.rst
python/lsst/ts/ledprojector/: __init__.py  config_schema.py  led_controller.py  ledprojector_commander.py  ledprojector_csc.py
tests/: test_csc.py  test_led_controller.py
tests/data/config/: _init.yaml  bad_config0.yaml  bad_config1.yaml  bad_config2.yaml  bad_config3.yaml  bad_config4.yaml  bad_config5.yaml  bad_config6.yaml  bad_config7.yaml  bad_config8.yaml  config.yaml  good_minimal.yaml  realconfig.yaml
ups/: ts_ledprojector.table
